fix: vue code block overflow

--- a/src/themes/mweb-vue.scss
+++ b/src/themes/mweb-vue.scss
@@ -36,6 +36,7 @@ pre {
   font-family: Roboto Mono, Source Sans Pro, Monaco, courier, monospace !important;
   font-size: 0.92rem;
   color: #e96900;
+  overflow-x: auto;
   background-color: #f8f8f8;
 }
 code {
